--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NodeJS RESTful API Project Express",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon server"
   },
   "keywords": [
     "NodeJS",
